# short-form-video-transcriber

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/accounts/: SKILL.md
.claude/skills/start/: SKILL.md
src/short_form_scraper/: __init__.py  cli.py  config.py  models.py
src/short_form_scraper/downloader/: __init__.py  video.py
src/short_form_scraper/organizer/: __init__.py  output.py
src/short_form_scraper/pipeline/: __init__.py  runner.py
src/short_form_scraper/scraper/: __init__.py  tiktok.py
src/short_form_scraper/summarizer/: __init__.py  claude.py
src/short_form_scraper/transcriber/: __init__.py  whisper.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_pipeline.py  test_single_video.py
tests/unit/: test_downloader.py  test_organizer.py  test_scraper.py  test_summarizer.py  test_transcriber.py
